# templates

astro/: astro.config.ts  biome.json  package.json  pnpm-lock.yaml  vitest.config.ts
astro/src/: env.d.ts  middleware.ts
astro/src/components/: Welcome.astro
astro/src/layouts/: Layout.astro
astro/tests/: base.test.ts
rust/: Cargo.toml  LICENSE-MIT  rust-toolchain.toml
rust/crates/unknown/: Cargo.toml
tauri/: .rustfmt.toml  Cargo.toml
tauri-astro/: .clang-format  .gitignore  Cargo.toml  pnpm-lock.yaml  pnpm-workspace.yaml  shell.nix
tauri-astro/.cargo/: config.toml
tauri-astro/crates/h2c/: Cargo.toml  build.rs
tauri-astro/crates/h2c/src/: codec.rs  lib.rs
tauri-astro/crates/h2c/src/codec/: rkyv.rs
tauri-astro/crates/lib/: Cargo.toml
tauri-astro/crates/lib/src/: lib.rs  log.rs
tauri-astro/crates/service/: .gitignore  Cargo.toml  Tauri.toml
tauri-astro/crates/service/src/: error.rs  lib.rs  main.rs
tauri-astro/crates/t-lib/: Cargo.toml
tauri-astro/crates/t-lib/src/: lib.rs  log.rs  malloc.rs
tauri-astro/crates/t-lib/src/error/: mod.rs  web.rs
tauri-astro/crates/t-lib/src/extension/: optional.rs
tauri-astro/crates/t-lib/src/share/: optional.rs
tauri-astro/crates/t-rpc/: build.rs
tauri-astro/crates/t-rpc/src/: lib.rs
tauri-astro/crates/t-rpc/src/codec/: rkyv.rs
tauri-astro/crates/t-srv/: Cargo.toml  Tauri.toml
tauri-astro/crates/t-srv/.cargo/: config.toml
tauri-astro/crates/t-srv/src/: ctx.rs  error.rs  lib.rs  main.rs  trpc.rs  tsrv.rs
tauri-astro/crates/t-srv/src/api/: mod.rs  therscan.rs
tauri-astro/crates/t-srv/src/api/etherscan/: block.rs  client.rs  error.rs  mod.rs  transaction.rs
tauri-astro/crates/t-srv/src/ctx/: config.rs  mod.rs
tauri-astro/crates/t-srv/src/fetch/: mod.rs
tauri-astro/crates/t-srv/src/fetch/etherscan/: client.rs  error.rs  mod.rs
tauri-astro/crates/t-srv/src/fetch/etherscan/block/: get_by_timestamp.rs  get_number.rs  mod.rs
tauri-astro/crates/t-srv/src/fetch/etherscan/contract/: get_abi.rs  get_sol.rs  mod.rs
tauri-astro/crates/t-srv/src/fetch/etherscan/contract/snapshots/: t_srv__fetch__etherscan__contract__get_abi__tests__get_abi_ulti.snap
tauri-astro/crates/t-srv/src/fetch/etherscan/model/: pagination.rs
tauri-astro/crates/t-srv/src/fetch/etherscan/transaction/: get_erc20_token_transfer_events.rs  get_internal_transactions.rs  get_transactions.rs  mod.rs  sort.rs
tauri-astro/crates/t-srv/src/middleware/: cors.rs  error.rs  limit.rs  mod.rs  retry.rs  trace.rs
tauri-astro/crates/t-srv/src/model/: result.rs
tauri-astro/crates/t-srv/src/routes/: mod.rs
tauri-astro/crates/t-srv/src/service/: etherscan.rs  mod.rs  shutdown.rs  user.rs  version.rs
tauri-astro/crates/t-srv/src/service/alpha/: mod.rs  swap.rs  tx.rs
tauri-astro/crates/t-srv/src/share/: config.toml  datetime.rs  mod.rs
tauri-astro/crates/t-srv/src/share/contract/: PROXY_SWAP_V2.ABI.json  ULTI.ABI  mod.rs  proxy_swap_v2.rs
tauri-astro/crates/t-srv/src/share/contract/sol_0xb300000b72DEAEb607a12d5f54773D1C19c7028d/: mod.rs
tauri-astro/crates/t-web/: Cargo.toml
tauri-astro/crates/t-web/src/: grpc_web_client.rs  init.rs  lib.rs  rpc.rs  wasm.rs
tauri-astro/docker/: .env  Dockerfile  compose.yaml  entrypoint.sh  init.sh  setup.sh
tauri-astro/protowire/: pingpong.proto
tauri-leptos/: .taplo.toml  rust-toolchain.toml  shell.nix
tauri-leptos/.cargo/: config.toml
tauri-leptos/crates/t-lib/: Cargo.toml
tauri-leptos/crates/t-lib/src/: error.rs  lib.rs
tauri-leptos/crates/t-rpc/protos/: internal.proto
tauri-leptos/crates/t-srv/: Tauri.toml
tauri-leptos/crates/t-srv/src/: log.rs  rpc.rs
tauri-leptos/crates/t-web/src/: main.rs  rpc.rs
tauri/crates/t-rpc/: Cargo.toml
tauri/crates/t-srv/: Cargo.toml
tauri/crates/t-web/: Cargo.toml  Trunk.toml
tauri/crates/t-web/src/: grpc_web_client.rs  lib.rs  view.rs
