[workspace]
members  = ["crates/*"]
resolver = "3"


[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.1"


[workspace.dependencies]
# Member
t-lib = { path = "crates/t-lib", version = "0.0.1" }
t-rpc = { path = "crates/t-rpc", version = "0.0.1" }
t-srv = { path = "crates/t-srv", version = "0.0.1" }

# Extern
bytes                      = { version = "1" }
console_error_panic_hook   = { version = "0.1" }
futures                    = { version = "0.3" }
gloo                       = { version = "0.11" }
http                       = { version = "1.3" }
http-body                  = { version = "1.0" }
http-body-util             = { version = "0.1" }
js-sys                     = { version = "0.3" }
mimalloc                   = { version = "0.1" }
nill                       = { version = "1.0.0" }
prost                      = { version = "0.13" }
rkyv                       = { version = "0.8" }
serde                      = { version = "1" }
serde-wasm-bindgen         = { version = "0.6" }
serde_json                 = { version = "1" }
thiserror                  = { version = "2.0" }
tokio                      = { version = "1" }
tonic                      = { version = "0.13", default-features = false }
tonic-web                  = { version = "0.13" }
tower                      = { version = "0.5" }
tower-http                 = { version = "0.6" }
tracing                    = { version = "0.1" }
tracing-browser-subscriber = { version = "0.2" }
tracing-subscriber         = { version = "0.3" }
wasm-bindgen               = { version = "0.2" }
wasm-bindgen-futures       = { version = "0.4" }
wasm-streams               = { version = "0.4" }
web-sys                    = { version = "0.3" }

# Build
tonic-build = { version = "0.13", default-features = false }


[patch.crates-io]


[workspace.lints.clippy]
as_conversions = "warn"
pedantic       = "warn"


[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = "symbols"
