[workspace]
members = [
    # "crates/*"
    "crates/t-lib",
    "crates/t-srv",
]
resolver = "3"


[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.1"


[workspace.dependencies]
# Member
t-lib = { path = "crates/t-lib", version = "0.0.1" }
# t-rpc = { path = "crates/t-rpc", version = "0.0.1" }
t-srv = { path = "crates/t-srv", version = "0.0.1" }
# t-web = { path = "crates/t-web", version = "0.0.1" }

# Extern
alloy                      = { version = "1.0" }
alloy-chains               = { version = "0.2" }
axum                       = { version = "0.8" }
bytes                      = { version = "1" }
chrono                     = { version = "0.4" }
config                     = { version = "0.15.13" }
console_error_panic_hook   = { version = "0.1" }
foundry-block-explorers    = { version = "0.20", git = "https://github.com/neomaxwell/block-explorers.git" }
futures                    = { version = "0.3" }
gloo                       = { version = "0.11" }
http                       = { version = "1.3" }
http-body                  = { version = "1.0" }
http-body-util             = { version = "0.1" }
mimalloc                   = { version = "0.1" }
nill                       = { version = "1.1.0" }
prost                      = { version = "0.13" }
rand                       = { version = "0.9" }
reqwest                    = { version = "0.12" }
rkyv                       = { version = "0.8" }
serde                      = { version = "1" }
serde_json                 = { version = "1" }
thiserror                  = { version = "2.0" }
tokio                      = { version = "1" }
tonic                      = { version = "0.13", default-features = false }
tonic-web                  = { version = "0.13" }
tower                      = { version = "0.5" }
tower-http                 = { version = "0.6" }
tracing                    = { version = "0.1" }
tracing-browser-subscriber = { version = "0.2" }
tracing-subscriber         = { version = "0.3" }
url                        = { version = "2.5" }
wasm-bindgen               = { version = "0.2" }
wasm-bindgen-futures       = { version = "0.4" }
wasm-streams               = { version = "0.4" }
web-sys                    = { version = "0.3" }

# Build
tonic-build = { version = "0.13", default-features = false }

# Test
insta = { version = "1.43" }


[patch.crates-io]


[workspace.lints.clippy]
as_conversions = "warn"
pedantic       = "warn"


[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = "symbols"
