[workspace]
members  = ["crates/*"]
resolver = "3"


[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
# Member
bin = { path = "crates/bin", version = "0.1.0" }
lib = { path = "crates/lib", version = "0.1.0" }

bytes                      = { default-features = false, version = "1" }
mimalloc                   = { default-features = false, version = "0.1" }
nill                       = { default-features = false, version = "=1.0" }
rkyv                       = { default-features = false, version = "0.8" }
serde                      = { default-features = false, version = "1" }
thiserror                  = { default-features = false, version = "2.0" }
tokio                      = { default-features = false, version = "1" }
tracing                    = { default-features = false, version = "0.1" }
tracing-browser-subscriber = { default-features = false, version = "0.2" }
tracing-subscriber         = { default-features = false, version = "0.3" }

# Build

# Test
insta = { default-features = false, version = "1.44" }


[patch.crates-io]


[workspace.lints.clippy]
as_conversions = "warn"
pedantic       = "warn"


[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = true
