[package]
name = "h2c"

description = "h2c"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[features]
default    = ["rkyv-codec"]
gzip       = ["tonic/gzip"]      # TODO: zstd(wasm)
rkyv-codec = ["dep:rkyv"]
router     = ["tonic/router"]
transport  = ["tonic/transport"]


[lints]
workspace = true


[dependencies]
bytes     = { workspace = true }
nill      = { workspace = true }
rkyv      = { workspace = true, features = ["std", "unaligned"], optional = true }
thiserror = { workspace = true }

prost     = { default-features = false, version = "0.14", features = ["derive"] }
tonic     = { default-features = false, version = "0.14", features = ["codegen"] }
tonic-web = { default-features = false, version = "0.14" }

[build-dependencies]
tonic-prost-build = { default-features = false, version = "0.14", features = ["cleanup-markdown"] }
