[package]
name = "service"

description = "service"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name       = "service_lib"


[features]
default = ["lib/mimalloc"]


[lints]
workspace = true


[dependencies]
lib = { workspace = true }

nill      = { workspace = true }
serde     = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio     = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }

tauri               = { version = "2", features = [] }
tauri-plugin-log    = { version = "2" }
tauri-plugin-opener = { version = "2" }


[dev-dependencies]
insta = { workspace = true, features = ["colors", "redactions", "yaml"] }


[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }
