[package]
name = "t-srv"

default-run = "cross_platform"
description = "t-srv"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[features]
default       = ["encoding-gzip", "mimalloc"]
encoding-gzip = ["t-rpc/gzip"]
mimalloc      = ["t-lib/mimalloc"]


[lints]
workspace = true


[dependencies]
t-lib = { workspace = true, features = ["tonic-transport"] }
t-rpc = { workspace = true, features = ["router", "transport"] }

alloy                   = { workspace = true }
alloy-chains            = { workspace = true }
axum                    = { workspace = true, features = ["macros"] }
chrono                  = { workspace = true }
foundry-block-explorers = { workspace = true }
nill                    = { workspace = true }
rand                    = { workspace = true }
reqwest                 = { workspace = true, features = ["json"] }
serde                   = { workspace = true, features = ["derive"] }
serde_json              = { workspace = true }
tauri                   = { version = "2", features = [] }
tauri-plugin-log        = { version = "2" }
tauri-plugin-opener     = { version = "2" }
thiserror               = { workspace = true }
tokio                   = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower-http              = { workspace = true, features = ["cors", "trace"] }
tracing                 = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["redactions", "yaml"] }


[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }
