[package]
name = "t-rpc"

description = "t-rpc"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[features]
default    = ["rkyv-codec"]
gzip       = ["tonic/gzip"]      # TODO: zstd(wasm)
rkyv-codec = ["dep:rkyv"]
router     = ["tonic/router"]
transport  = ["tonic/transport"]


[lints]
workspace = true


[dependencies]
bytes     = { workspace = true }
nill      = { workspace = true }
prost     = { workspace = true }
rkyv      = { workspace = true, features = ["unaligned"], optional = true }
thiserror = { workspace = true }
tonic     = { workspace = true, features = ["codegen", "prost"] }
tonic-web = { workspace = true }


[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }
